tests/sema/fail/v5_fail_extend_struct.ep
# COMPILE_FAIL_CONTAINS: extend expects an array with the same element type
type Box {
    value: i64
}

type Other {
    value: i64
}

fun main(): void {
    let a = new Box[1]
    let b = new Other[1]
    a.extend(b)
}
